--- a/src/login/styles/_Nins.scss
+++ b/src/login/styles/_Nins.scss
@@ -43,7 +43,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 300px));
   grid-column-gap: 1rem;
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 
 .vetting-button {
@@ -63,6 +63,8 @@
     text-transform: uppercase;
   }
   & button {
+    margin-left: 0px;
+    margin-bottom: 0.5rem;
     font-family: "ProximaNova-Bold";
     line-height: 1;
     color: #161616;
@@ -90,7 +92,7 @@
 }
 
 .proofing-btn-help {
-  margin: 1rem 0.5rem;
+  margin: 0 0.5rem 1rem 0.5rem;
   line-height: 1.2;
   color: #7c7c7c;
   font-size: 0.875rem;
@@ -116,7 +118,7 @@
   }
 }
 @media (max-width: 320px) {
-  #nins-btn-grid {
-    margin: 0 -1.5rem;
-  }
+  // #nins-btn-grid {
+  //   margin: 0 -1.5rem;
+  // }
 }
